--- a/client/src/style.css
+++ b/client/src/style.css
@@ -118,3 +118,14 @@ main {
     color: #fff;
     width: 15rem;
 }
+
+.manga-details {
+    background-color: #0111263f;
+    border-radius: 12px;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+} 
